# Palletron

./: .gitignore  README.md
Arduino-code/: platformio.ini
Cad_final/: 200ALU_40x40.par  270ALU_40x40.par  AL-P8-40-40-18166.STEP  Battery.par  Battey_box.asm  Battey_box.cfg  Clamps.dft  Linak holder.par  Linak supports.par  Linak_bearing_ring.par  Linak_rod - Copy.par  Linak_rod.par  Pallet_base.asm  Pallet_base.cfg  Plate-DESKTOP-HK1CT5U.par  Plate.par  Plate_2.par  Plate_clamping_bolts.par  RDW08.par  (+47 more)
ROS/src/articubot_one-d5aa5e9bc9039073c0d8fd7fe426e170be79c087/: CMakeLists.txt  README.md
ROS/src/articubot_one-d5aa5e9bc9039073c0d8fd7fe426e170be79c087/config/: camera0.yaml  camera1.yaml  empty.yaml  gazebo_physics.yaml  joystick.config.yaml  lidar.rviz  mapper_params_online_async.yaml  mapper_params_online_async_irl.yaml  mapper_params_online_async_old.yaml  my_controllers.yaml  nav2_params.yaml  nav2_params_irl.yaml  nav2_params_old.yaml  nav2_params_oldest.yaml  palletron.rviz  palletron_irl.rviz  test.rviz
ROS/src/articubot_one-d5aa5e9bc9039073c0d8fd7fe426e170be79c087/description/: camera.xacro  camera_irl.xacro  final_robot.urdf  gazebo_control.xacro  lidar.xacro  lidar_irl.xacro  robot.urdf  robot.urdf.xacro  robot_core.xacro  robot_core_humble.xacro  robot_core_irl.xacro  robot_core_newco.xacro  robot_core_newco_base_change.xacro  robot_irl.urdf.xacro  robot_old.urdf  ros2_control.xacro  test.urdf
ROS/src/articubot_one-d5aa5e9bc9039073c0d8fd7fe426e170be79c087/launch/: joystick.launch.py  joystick_launch.py  launch_sim.launch.py  lidar_launch.py  multi_camera_launch.py  navigation_launch_irl.py  palletron.launch.py  palletron_launch.py  rsp.launch.py
ROS/src/articubot_one-d5aa5e9bc9039073c0d8fd7fe426e170be79c087/scripts/: gazebo_motor_driver.py  laser_scan_fusion_node.py  linear_actuator_controller_irl_node.py  linear_actuator_controller_node.py  odom_irl_publisher.py  odom_publisher.py  palletron_controller_node.py  palletron_irl_controller_node.py  palletron_joint_state_publisher_node.py
ROS/src/articubot_one-d5aa5e9bc9039073c0d8fd7fe426e170be79c087/worlds/: emptytest.world  palletest.world  palletron.world  robot.world  robot_pallet.world  robot_pallet2.world  robot_pallet3.world  test_track.world  test_track2.world  testworldwithPalle
(+244 files in other folders)
